// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs block with small width 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    className="css-8vahvp"
  >
    <span
      className="css-1u31squ"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      Project name-2948474770249-999-202995477...
    </span>
    <div
      className="css-vzwfet"
    >
      <span
        className="css-sw5zrb"
      >
        /
      </span>
      <a
        className="css-1994ztc"
        href="/tarantool"
        onClick={[Function]}
      >
        @tarantool.io/ui-kit
      </a>
      <span
        className="css-sw5zrb"
      >
        /
      </span>
      <a
        className="css-1994ztc"
        href="/section-ui-components"
        onClick={[Function]}
      >
        UI Components
      </a>
      <span
        className="css-sw5zrb"
      >
        /
      </span>
      <a
        className="css-1994ztc"
        href="/breadcrumb"
        onClick={[Function]}
      >
        Breadcrumb
      </a>
      <span
        className="css-sw5zrb"
      >
        /
      </span>
      <a
        className="css-1994ztc"
        href="/overflow-list"
        onClick={[Function]}
      >
        OverflowList
      </a>
      <span
        className="css-sw5zrb"
      >
        /
      </span>
      <a
        className="css-1994ztc"
        href="/resize-sensor"
        onClick={[Function]}
      >
        ResizeSensor
      </a>
      <div
        className="css-11rp940"
      />
    </div>
  </div>
</div>
`;

exports[`Breadcrumbs renders correctly 1`] = `
<div
  className="css-8vahvp"
>
  <span
    className="css-4haz1u"
  >
    Project name
  </span>
  <div
    className="css-vzwfet"
  >
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/tarantool"
      onClick={[Function]}
    >
      @tarantool.io/ui-kit
    </a>
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/section-ui-components"
      onClick={[Function]}
    >
      UI Components
    </a>
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/breadcrumb"
      onClick={[Function]}
    >
      Breadcrumb
    </a>
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/overflow-list"
      onClick={[Function]}
    >
      OverflowList
    </a>
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/resize-sensor"
      onClick={[Function]}
    >
      ResizeSensor
    </a>
    <div
      className="css-11rp940"
    />
  </div>
</div>
`;

exports[`Breadcrumbs renders correctly long name 1`] = `
<div
  className="css-8vahvp"
>
  <span
    className="css-1u31squ"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    Project name-2948474770249-999-202995477...
  </span>
  <div
    className="css-vzwfet"
  >
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/tarantool"
      onClick={[Function]}
    >
      @tarantool.io/ui-kit
    </a>
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/section-ui-components"
      onClick={[Function]}
    >
      UI Components
    </a>
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/breadcrumb"
      onClick={[Function]}
    >
      Breadcrumb
    </a>
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/overflow-list"
      onClick={[Function]}
    >
      OverflowList
    </a>
    <span
      className="css-sw5zrb"
    >
      /
    </span>
    <a
      className="css-1994ztc"
      href="/resize-sensor"
      onClick={[Function]}
    >
      ResizeSensor
    </a>
    <div
      className="css-11rp940"
    />
  </div>
</div>
`;
